# Smartlead-Campaign-MCP-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  pyproject.toml  requirements.txt
src/: main.py  utils.py
