[project]
name = "smartlead_mcp"
version = "0.1.0"
description = "MCP server for interacting with the Smartlead API, allowing AI assistants to manage Smartlead campaigns through natural language"
readme = "README.MD"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Miska Kaskinen", email = "miska@swiftdial.ai" }
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]
